--- a/src/components/PetCard/styles.module.css
+++ b/src/components/PetCard/styles.module.css
@@ -27,13 +27,15 @@
   .name {
     color: lightseagreen;
   }
+  .emojiButton:hover {
+    cursor: auto;
+  }
 }
 
 .emojiButton {
   font-size: 50px;
   border: none;
   background-color: transparent;
-  /* cursor: pointer; */
   &:hover {
     cursor: url("/heart.svg"), auto;
   }
